--- a/resources/views/partials/related_across.antlers.html
+++ b/resources/views/partials/related_across.antlers.html
@@ -1,25 +1,38 @@
-<!-- Grid layout -->
+
 <div class="container mx-auto">
     <div class="mx-5 pb-10">
         <div class="grid grid-cols md:grid-cols-3 gap-12">
 
-            <!-- Column 1 -->
             {{ posts }}
-            <div class="">
-                <a href="{{ url }}">
+            <div x-data="articleAccess()">
+
+                <a href="#" x-bind:data-access-level="'{{ access_level:slug | raw }}'"
+                    @click.prevent="handlePostClick($event.currentTarget.dataset.accessLevel, '{{ url }}')">
+
                     <img src="{{ featured_image ?? landscape_default_image:landscape_image }}"
                         alt="{{ featured_image:alt }}"
                         class="w-full h-[250px] object-cover rounded-md mb-4 transition-transform transform hover:scale-105 duration-300">
                 </a>
 
-                <!-- Check if any of the fields exist and render them -->
-                {{# <p class="text-xs uppercase mb-2 space-x-2">
+                <p class="text-xs uppercase mb space-x-2">
                     {{ if topics_categories }}
-                    {{ topics_categories }}<a href="{{ url }}">{{ title }}</a>{{ /topics_categories }}
+                    {{ topics_categories }}
+                    <a href="{{ url }}">{{ title }}</a>
+                    {{ /topics_categories }}
+                    {{ elseif issues_categories }}
+                    {{ issues_categories }}
+                    <a href="{{ url }}">{{ title }}</a>
+                    {{ /issues_categories }}
+                    {{ else }}
+                    <span class="text-gray-500">Uncategorized</span>
                     {{ /if }}
-                </p> #}}
+                </p>
 
-                <a href="{{ url }}">
+                
+
+                <a href="#" x-bind:data-access-level="'{{ access_level:slug | raw }}'"
+                    @click.prevent="handlePostClick($event.currentTarget.dataset.accessLevel, '{{ url }}')">
+
                     <h3 class="font-bold text-lg mb-2 text-gray-900">{{ title }}</h3>
                 </a>
                 <p class="text-xs mb-2" alt="Author">{{ author }} {{ name }} {{ /author }}</p>
@@ -34,8 +47,8 @@
             {{ /posts }}
 
             <!-- Static content -->
-            <div class="flex flex-col py-20 bg-gray-300">
-                <p>Advert</p>
+            <div class="flex flex-col">
+                {{ partial:partials/post_cards/post_ad }}
             </div>
         </div>
     </div>
